// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GorgiasChatIntegrationPreferences/> _setLinkedEmailIntegration() should update the linked email integration in the state. 1`] = `
Object {
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-dynamic",
  "emailCaptureEnforcement": "optional",
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": false,
  "isUpdating": false,
  "linkedEmailIntegration": null,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "email-capture",
}
`;

exports[`<GorgiasChatIntegrationPreferences/> _setLinkedEmailIntegration() should update the linked email integration in the state. 2`] = `
Object {
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-dynamic",
  "emailCaptureEnforcement": "optional",
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": false,
  "isUpdating": false,
  "linkedEmailIntegration": 234,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "email-capture",
}
`;

exports[`<GorgiasChatIntegrationPreferences/> _submitPreferences() should submit the form with defaults 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Immutable.Map {
        "id": undefined,
        "meta": Immutable.Map {
          "language": "en-US",
          "preferences": Immutable.Map {
            "auto_responder": Immutable.Map {
              "enabled": true,
              "reply": "reply-dynamic",
            },
            "email_capture_enforcement": "optional",
            "linked_email_integration": null,
            "hide_on_mobile": false,
            "hide_outside_business_hours": false,
            "offline_mode_enabled_datetime": null,
            "live_chat_availability": "auto-based-on-agent-availability",
          },
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<GorgiasChatIntegrationPreferences/> _submitPreferences() should submit the form with loaded values 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Immutable.Map {
        "id": 1,
        "meta": Immutable.Map {
          "preferences": Immutable.Map {
            "auto_responder": Immutable.Map {
              "enabled": false,
              "reply": "reply-in-minutes",
            },
            "email_capture_enforcement": "optional",
            "linked_email_integration": null,
            "hide_on_mobile": false,
            "hide_outside_business_hours": false,
            "offline_mode_enabled_datetime": null,
            "live_chat_availability": "auto-based-on-agent-availability",
          },
          "language": "en-US",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`<GorgiasChatIntegrationPreferences/> componentDidMount() should initialize the state using the integration passed 1`] = `
Object {
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-in-minutes",
  "emailCaptureEnforcement": "always-required",
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": true,
  "isUpdating": false,
  "linkedEmailIntegration": null,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "email-capture",
}
`;

exports[`<GorgiasChatIntegrationPreferences/> componentDidUpdate() should initialize the state using the integration passed because the state was not initialized yet and the integration passed is not empty 1`] = `
Object {
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-in-minutes",
  "emailCaptureEnforcement": "always-required",
  "hideOnMobile": false,
  "hideOutsideBusinessHours": false,
  "isInitialized": true,
  "isUpdating": false,
  "linkedEmailIntegration": null,
  "liveChatAvailability": "auto-based-on-agent-availability",
  "offlineModeEnabledDatetime": null,
  "preview": "email-capture",
}
`;

exports[`<GorgiasChatIntegrationPreferences/> render() should render buttons in loading state because preferences are being submitted 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/channels/gorgias_chat"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        />
      </Breadcrumb>
    }
  />
  <GorgiasChatIntegrationNavigation
    integration={
      Immutable.Map {
        "id": 2,
        "type": "gorgias_chat",
        "meta": Immutable.Map {
          "language": "en-US",
        },
        "decoration": Immutable.Map {
          "main_color": "#789c5d",
          "conversation_color": "#08d123",
        },
      }
    }
  />
  <GorgiasChatIntegrationPreviewContainer
    preview={
      <ChatIntegrationPreview
        autoResponderEnabled={true}
        autoResponderReply="reply-dynamic"
        isOnline={true}
        language="en-US"
        mainColor="#789c5d"
        position={
          Object {
            "alignment": "bottom-right",
            "offsetX": 0,
            "offsetY": 0,
          }
        }
        renderFooter={true}
      >
        <OptionalEmailCapture
          conversationColor="#08d123"
          language="en-US"
        />
      </ChatIntegrationPreview>
    }
  >
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <div>
        <div
          className="formSection"
        >
          <h4
            className="title"
          >
            Email prompt
            <i
              className="material-icons-outlined tooltipIcon"
              id="email-prompt-help"
            >
              info
            </i>
            <Tooltip
              arrowClassName="tooltip-arrow"
              autohide={false}
              delay={100}
              innerClassName="tooltip-inner"
              placement="top-start"
              popperClassName="tooltip"
              target="email-prompt-help"
            >
              You can change the email prompt message by adjusting the chat default text values.
               
              <a
                href="https://docs.gorgias.com/en-US/chat-getting-started-81789#change-email-promptmessage"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
            </Tooltip>
          </h4>
          <RadioFieldSet
            onChange={[Function]}
            options={
              Array [
                Object {
                  "caption": "Maximizes conversation volume",
                  "label": "Optional",
                  "value": "optional",
                },
                Object {
                  "caption": "Reduces conversation volume by around 30%",
                  "label": "Always required",
                  "value": "always-required",
                },
              ]
            }
            selectedValue="optional"
          />
        </div>
        <div
          className="formSection"
        >
          <h4
            className="title"
          >
            Live chat
          </h4>
          <div>
            <p
              className="mb-3"
            >
              Choose when customers can send live chat messages to your team during
               
              <Link
                to="/app/settings/business-hours"
              >
                Business hours
              </Link>
              .
            </p>
            <RadioFieldSet
              className="mb-3 radioFieldSet"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "caption": "Customers can only send live chat messages when an agent is available in Gorgias",
                    "label": "Live when agents are available",
                    "value": "auto-based-on-agent-availability",
                  },
                  Object {
                    "caption": "Customers can always send live chat messages during business hours",
                    "label": "Always live during business hours",
                    "value": "always-live-during-business-hours",
                  },
                  Object {
                    "caption": "Customers can only send messages using the contact form",
                    "label": "Offline",
                    "value": "offline",
                  },
                ]
              }
              selectedValue="auto-based-on-agent-availability"
            />
            <p
              className="mb-3"
            >
              Automation Add-On features are always available, if enabled. When live chat is unavailable, customers can message your team with
               
              <a
                href="https://docs.gorgias.com/en-US/gorgias-chat---contact-form-88573"
                rel="noopener noreferrer"
                target="_blank"
              >
                contact form
              </a>
               
              to receive an email response. Live chat is always unavailable outside business hours.
            </p>
          </div>
        </div>
        <div
          className="formSection"
        >
          <h4
            className="title"
          >
            Hide chat
          </h4>
          <div
            className="formGroup d-flex"
          >
            <ToggleInput
              isToggled={false}
              onClick={[Function]}
            />
            <div
              className="ml-2"
            >
              <b>
                Hide chat outside of business hours
              </b>
              <i
                className="material-icons-outlined tooltipIcon"
                id="hide-outside-business-hours-help"
              >
                info
              </i>
              <Tooltip
                arrowClassName="tooltip-arrow"
                innerClassName="tooltip-inner"
                placement="top-start"
                popperClassName="tooltip"
                target="hide-outside-business-hours-help"
              >
                Your customers will be notified in the chat 30 min before the end of your business hours. For customers with no active conversations, the chat will be hidden immediately. For customers with an active conversation, the chat icon will be hidden 5 min after being closed.
              </Tooltip>
              <div
                className="form-text text-muted"
              >
                Chat will be removed from your website after business hours
              </div>
            </div>
          </div>
          <div
            className="formGroup d-flex"
          >
            <ToggleInput
              isToggled={false}
              onClick={[Function]}
            />
            <div
              className="ml-2"
            >
              <b>
                Hide chat on mobile
              </b>
              <div
                className="form-text text-muted"
              >
                Remove chat from your website when customers access via mobile devices
              </div>
            </div>
          </div>
        </div>
        <div
          className="formSection"
        >
          <h4
            className="title"
          >
            Auto-responder
          </h4>
          <div
            className="mb-3 d-flex align-items-center"
          >
            <ToggleInput
              isToggled={true}
              onClick={[Function]}
            />
            <div
              className="ml-2"
            >
              <b>
                Enable auto-responder
              </b>
            </div>
          </div>
          <div
            className="mb-3"
          >
            <p
              className=""
            >
              During
               
              <Link
                to="/app/settings/business-hours"
              >
                Business hours
              </Link>
              , tell customers how fast they can expect a response with an automated message:
            </p>
            <RadioFieldSet
              className="mb-2 radioFieldSet"
              isDisabled={false}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": <div>
                      Dynamic wait time (recommended)
                       
                      <span
                        className="dynamicTimeTooltip"
                        id="dynamic-wait-time-option"
                      >
                        <i
                          className="material-icons"
                        >
                          info_outline
                        </i>
                      </span>
                      <Tooltip
                        autohide={false}
                        placement="top"
                        target="dynamic-wait-time-option"
                      >
                        Calculated based on your team's first response time of last 10 live chat tickets.
                         
                        <a
                          href="https://docs.gorgias.com/en-US/109858-dc67e62b040a4649aed68bdce7ffa4f5"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          Learn more
                        </a>
                      </Tooltip>
                      <p
                        className="dynamicDescription"
                      >
                        If the wait time is long, customers can choose to wait in the chat or leave a message through contact form
                      </p>
                    </div>,
                    "value": "reply-dynamic",
                  },
                  Object {
                    "label": "Thanks for reaching out! We typically reply in a few minutes",
                    "value": "reply-in-minutes",
                  },
                  Object {
                    "label": "Thanks for reaching out! We typically reply in a few hours",
                    "value": "reply-in-hours",
                  },
                ]
              }
              selectedValue="reply-dynamic"
            />
            <p
              className=""
            >
              Outside
               
              <Link
                to="/app/settings/business-hours"
              >
                Business hours
              </Link>
              , Gorgias will automatically tell customers when they can expect a response.
            </p>
          </div>
        </div>
        <div
          className="formSection"
        >
          <h4
            className="title"
          >
            Associated email integration
          </h4>
          <p
            className="mb-3"
          >
            If a customer doesn't see your responses on a chat for 1 hour, Gorgias will automatically deliver these messages via email.
            <br />
            Satisfaction surveys for chat tickets are also sent over email.
          </p>
          <Label
            className="control-label"
            for="linkedEmailIntegration"
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            Email integration used to send these emails
          </Label>
          <SelectField
            allowCustomValue={false}
            fixedWidth={false}
            fullWidth={true}
            id={null}
            onChange={[Function]}
            onSearchChange={[Function]}
            options={Array []}
            placeholder="Select an email integration"
            required={false}
            singular="option"
            style={Object {}}
            value={null}
          />
        </div>
      </div>
      <Button
        className="btn-loading"
        color="success"
        disabled={true}
        tag="button"
        type="submit"
      >
        Save changes
      </Button>
    </Form>
  </GorgiasChatIntegrationPreviewContainer>
</div>
`;

exports[`<GorgiasChatIntegrationPreferences/> render() should render the Chat preferences 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/channels/gorgias_chat"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        />
      </Breadcrumb>
    }
  />
  <GorgiasChatIntegrationNavigation
    integration={
      Immutable.Map {
        "id": 2,
        "type": "gorgias_chat",
        "meta": Immutable.Map {
          "language": "en-US",
        },
        "decoration": Immutable.Map {
          "main_color": "#789c5d",
          "conversation_color": "#08d123",
        },
      }
    }
  />
  <GorgiasChatIntegrationPreviewContainer
    preview={
      <ChatIntegrationPreview
        autoResponderEnabled={true}
        autoResponderReply="reply-dynamic"
        isOnline={true}
        language="en-US"
        mainColor="#789c5d"
        position={
          Object {
            "alignment": "bottom-right",
            "offsetX": 0,
            "offsetY": 0,
          }
        }
        renderFooter={true}
      >
        <OptionalEmailCapture
          conversationColor="#08d123"
          language="en-US"
        />
      </ChatIntegrationPreview>
    }
  >
    <Form
      onSubmit={[Function]}
      tag="form"
    >
      <div>
        <div
          className="formSection"
        >
          <h4
            className="title"
          >
            Email prompt
            <i
              className="material-icons-outlined tooltipIcon"
              id="email-prompt-help"
            >
              info
            </i>
            <Tooltip
              arrowClassName="tooltip-arrow"
              autohide={false}
              delay={100}
              innerClassName="tooltip-inner"
              placement="top-start"
              popperClassName="tooltip"
              target="email-prompt-help"
            >
              You can change the email prompt message by adjusting the chat default text values.
               
              <a
                href="https://docs.gorgias.com/en-US/chat-getting-started-81789#change-email-promptmessage"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
            </Tooltip>
          </h4>
          <RadioFieldSet
            onChange={[Function]}
            options={
              Array [
                Object {
                  "caption": "Maximizes conversation volume",
                  "label": "Optional",
                  "value": "optional",
                },
                Object {
                  "caption": "Reduces conversation volume by around 30%",
                  "label": "Always required",
                  "value": "always-required",
                },
              ]
            }
            selectedValue="optional"
          />
        </div>
        <div
          className="formSection"
        >
          <h4
            className="title"
          >
            Live chat
          </h4>
          <div>
            <p
              className="mb-3"
            >
              Choose when customers can send live chat messages to your team during
               
              <Link
                to="/app/settings/business-hours"
              >
                Business hours
              </Link>
              .
            </p>
            <RadioFieldSet
              className="mb-3 radioFieldSet"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "caption": "Customers can only send live chat messages when an agent is available in Gorgias",
                    "label": "Live when agents are available",
                    "value": "auto-based-on-agent-availability",
                  },
                  Object {
                    "caption": "Customers can always send live chat messages during business hours",
                    "label": "Always live during business hours",
                    "value": "always-live-during-business-hours",
                  },
                  Object {
                    "caption": "Customers can only send messages using the contact form",
                    "label": "Offline",
                    "value": "offline",
                  },
                ]
              }
              selectedValue="auto-based-on-agent-availability"
            />
            <p
              className="mb-3"
            >
              Automation Add-On features are always available, if enabled. When live chat is unavailable, customers can message your team with
               
              <a
                href="https://docs.gorgias.com/en-US/gorgias-chat---contact-form-88573"
                rel="noopener noreferrer"
                target="_blank"
              >
                contact form
              </a>
               
              to receive an email response. Live chat is always unavailable outside business hours.
            </p>
          </div>
        </div>
        <div
          className="formSection"
        >
          <h4
            className="title"
          >
            Hide chat
          </h4>
          <div
            className="formGroup d-flex"
          >
            <ToggleInput
              isToggled={false}
              onClick={[Function]}
            />
            <div
              className="ml-2"
            >
              <b>
                Hide chat outside of business hours
              </b>
              <i
                className="material-icons-outlined tooltipIcon"
                id="hide-outside-business-hours-help"
              >
                info
              </i>
              <Tooltip
                arrowClassName="tooltip-arrow"
                innerClassName="tooltip-inner"
                placement="top-start"
                popperClassName="tooltip"
                target="hide-outside-business-hours-help"
              >
                Your customers will be notified in the chat 30 min before the end of your business hours. For customers with no active conversations, the chat will be hidden immediately. For customers with an active conversation, the chat icon will be hidden 5 min after being closed.
              </Tooltip>
              <div
                className="form-text text-muted"
              >
                Chat will be removed from your website after business hours
              </div>
            </div>
          </div>
          <div
            className="formGroup d-flex"
          >
            <ToggleInput
              isToggled={false}
              onClick={[Function]}
            />
            <div
              className="ml-2"
            >
              <b>
                Hide chat on mobile
              </b>
              <div
                className="form-text text-muted"
              >
                Remove chat from your website when customers access via mobile devices
              </div>
            </div>
          </div>
        </div>
        <div
          className="formSection"
        >
          <h4
            className="title"
          >
            Auto-responder
          </h4>
          <div
            className="mb-3 d-flex align-items-center"
          >
            <ToggleInput
              isToggled={true}
              onClick={[Function]}
            />
            <div
              className="ml-2"
            >
              <b>
                Enable auto-responder
              </b>
            </div>
          </div>
          <div
            className="mb-3"
          >
            <p
              className=""
            >
              During
               
              <Link
                to="/app/settings/business-hours"
              >
                Business hours
              </Link>
              , tell customers how fast they can expect a response with an automated message:
            </p>
            <RadioFieldSet
              className="mb-2 radioFieldSet"
              isDisabled={false}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": <div>
                      Dynamic wait time (recommended)
                       
                      <span
                        className="dynamicTimeTooltip"
                        id="dynamic-wait-time-option"
                      >
                        <i
                          className="material-icons"
                        >
                          info_outline
                        </i>
                      </span>
                      <Tooltip
                        autohide={false}
                        placement="top"
                        target="dynamic-wait-time-option"
                      >
                        Calculated based on your team's first response time of last 10 live chat tickets.
                         
                        <a
                          href="https://docs.gorgias.com/en-US/109858-dc67e62b040a4649aed68bdce7ffa4f5"
                          rel="noopener noreferrer"
                          target="_blank"
                        >
                          Learn more
                        </a>
                      </Tooltip>
                      <p
                        className="dynamicDescription"
                      >
                        If the wait time is long, customers can choose to wait in the chat or leave a message through contact form
                      </p>
                    </div>,
                    "value": "reply-dynamic",
                  },
                  Object {
                    "label": "Thanks for reaching out! We typically reply in a few minutes",
                    "value": "reply-in-minutes",
                  },
                  Object {
                    "label": "Thanks for reaching out! We typically reply in a few hours",
                    "value": "reply-in-hours",
                  },
                ]
              }
              selectedValue="reply-dynamic"
            />
            <p
              className=""
            >
              Outside
               
              <Link
                to="/app/settings/business-hours"
              >
                Business hours
              </Link>
              , Gorgias will automatically tell customers when they can expect a response.
            </p>
          </div>
        </div>
        <div
          className="formSection"
        >
          <h4
            className="title"
          >
            Associated email integration
          </h4>
          <p
            className="mb-3"
          >
            If a customer doesn't see your responses on a chat for 1 hour, Gorgias will automatically deliver these messages via email.
            <br />
            Satisfaction surveys for chat tickets are also sent over email.
          </p>
          <Label
            className="control-label"
            for="linkedEmailIntegration"
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            Email integration used to send these emails
          </Label>
          <SelectField
            allowCustomValue={false}
            fixedWidth={false}
            fullWidth={true}
            id={null}
            onChange={[Function]}
            onSearchChange={[Function]}
            options={Array []}
            placeholder="Select an email integration"
            required={false}
            singular="option"
            style={Object {}}
            value={null}
          />
        </div>
      </div>
      <Button
        className=""
        color="success"
        disabled={false}
        tag="button"
        type="submit"
      >
        Save changes
      </Button>
    </Form>
  </GorgiasChatIntegrationPreviewContainer>
</div>
`;
